fix(added the header and menu component in the app.component.html):

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HrisMaintenanceApp</title>
+  <title>HRIS | Maintenance</title>
+  <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <base href="/">
 
